testsuite/tests/default/default-fail08.stderr
default-fail08.hs:10:9: error: [GHC-26555]
    • Illegal named default declaration for non-class ‘CoercibleFromInt’
    • When checking the class at the head of a named default declaration

